# crab-harness

./: .env.example  .gitignore  Install.md  LICENSE  Makefile  README.md  README_zh.md  config.example.yaml  crab-harness.code-workspace
backend/: CLAUDE.md  Makefile  README.md  debug.py  docker-compose.dev.yml  pyproject.toml  ruff.toml
backend/docs/: API.md  APPLE_CONTAINER.md  ARCHITECTURE.md  AUTO_TITLE_GENERATION.md  CONFIGURATION.md  FILE_UPLOAD.md  GUARDRAILS.md  HARNESS_APP_SPLIT.md  MCP_SERVER.md  PATH_EXAMPLES.md  PHASE1_PHASE4_REVIEW_ISSUES.md  README.md  SETUP.md  plan_mode_usage.md  rfc-extract-shared-modules.md  summarization.md
backend/tests/: conftest.py  test_acp_config.py  test_aio_sandbox_provider.py  test_app_config_reload.py  test_artifacts_router.py  test_checkpointer.py  test_checkpointer_none_fix.py  test_claude_provider_oauth_billing.py  test_cli_auth_providers.py  test_client.py  test_client_e2e.py  test_client_live.py  test_config_version.py  test_credential_loader.py  test_custom_agent.py  test_dangling_tool_call_middleware.py  test_docker_sandbox_mode_detection.py  test_e2b_sandbox.py  test_guardrail_middleware.py  test_harness_boundary.py  test_infoquest_client.py  test_invoke_acp_agent_tool.py  test_lead_agent_model_resolution.py  test_local_sandbox_encoding.py  test_loop_detection_middleware.py  test_mcp_client_config.py  test_mcp_oauth.py  test_mcp_sync_wrapper.py  test_memory_prompt_injection.py  test_memory_storage.py  test_memory_updater.py  test_memory_upload_filtering.py  test_model_config.py  test_model_factory.py  (+31 more)
(+118 files in other folders)
